--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0052)file:///C:/Users/student/Downloads/ithost/index.html -->
+<!-- saved from url=(0052)index.html -->
 <html lang="zxx"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>IT Host - Hosting Template</title>
 	
@@ -7,19 +7,19 @@
 	<meta name="keywords" content="cloud, hosting, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
-	<link href="file:///C:/Users/student/Downloads/ithost/img/favicon.ico" rel="shortcut icon">
+	<link href="img/favicon.ico" rel="shortcut icon">
 
 	<!-- Google Font -->
-	<link href="file:///C:/Users/student/Downloads/ithost/index_files/css" rel="stylesheet">
+	<link href="index_files/css" rel="stylesheet">
 
 
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/bootstrap.min.css">
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/font-awesome.min.css">
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/flaticon.css">
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/owl.carousel.min.css">
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/animate.css">
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/style.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/flaticon.css">
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="css/style.css">
 
 
 	<!--[if lt IE 9]>
@@ -36,18 +36,18 @@
 
 	<!-- Header section -->
 	<header class="header-section">
-		<a href="file:///C:/Users/student/Downloads/ithost/index.html" class="site-logo"><img src="file:///C:/Users/student/Downloads/ithost/img/logo.png" alt=""></a>
+		<a href="index.html" class="site-logo"><img src="img/logo.png" alt=""></a>
 		<div class="nav-switch">
 			<i class="fa fa-bars"></i>
 		</div>
 		<div class="nav-warp">
 			
 			<ul class="main-menu">
-				<li><a href="file:///C:/Users/student/Downloads/ithost/index.html">Home</a></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/about.html">About us</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About us</a></li>
 				<li></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/blog.html">Team</a></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/contact.html">Contact</a></li>
+				<li><a href="blog.html">Team</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
 	</header>
@@ -66,7 +66,7 @@
 					</div>
 				</div>
 				<div class="hero-rocket">
-					<img src="file:///C:/Users/student/Downloads/ithost/img/rocket.png" alt="">
+					<img src="img/rocket.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -111,11 +111,11 @@
 	<footer class="footer-section">
 		<div class="container">
 			<ul class="footer-menu">
-				<li><a href="file:///C:/Users/student/Downloads/ithost/index.html">Home</a></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/index.html">About us</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="index.html">About us</a></li>
 				<li></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/blog.html">Team</a></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/index.html">Contact</a></li>
+				<li><a href="blog.html">Team</a></li>
+				<li><a href="index.html">Contact</a></li>
 			</ul>
 			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright ©<script>document.write(new Date().getFullYear());</script>2019201920192019 All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com/" target="_blank">Colorlib</a>
@@ -126,11 +126,11 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019201920
 
 
 	<!--====== Javascripts & Jquery ======-->
-	<script src="file:///C:/Users/student/Downloads/ithost/js/jquery-3.2.1.min.js"></script>
-	<script src="file:///C:/Users/student/Downloads/ithost/js/bootstrap.min.js"></script>
-	<script src="file:///C:/Users/student/Downloads/ithost/js/owl.carousel.min.js"></script>
-	<script src="file:///C:/Users/student/Downloads/ithost/js/circle-progress.min.js"></script>
-	<script src="file:///C:/Users/student/Downloads/ithost/js/main.js"></script>
+	<script src="js/jquery-3.2.1.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/owl.carousel.min.js"></script>
+	<script src="js/circle-progress.min.js"></script>
+	<script src="js/main.js"></script>
 
 	
 
