--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0052)file:///C:/Users/student/Downloads/ithost/about.html -->
+<!-- saved from url=(0052)about.html -->
 <html lang="zxx"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>IT Host - Hosting Template</title>
 	
@@ -7,18 +7,18 @@
 	<meta name="keywords" content="cloud, hosting, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
-	<link href="file:///C:/Users/student/Downloads/ithost/img/favicon.ico" rel="shortcut icon">
+	<link href="img/favicon.ico" rel="shortcut icon">
 
 	<!-- Google Font -->
-	<link href="file:///C:/Users/student/Downloads/ithost/about_files/css" rel="stylesheet">
+	<link href="about_files/css" rel="stylesheet">
 
 
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/bootstrap.min.css">
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/font-awesome.min.css">
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/flaticon.css">
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/owl.carousel.min.css">
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/style.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/flaticon.css">
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/style.css">
 
 
 	<!--[if lt IE 9]>
@@ -35,18 +35,18 @@
 
 	<!-- Header section -->
 	<header class="header-section">
-		<a href="file:///C:/Users/student/Downloads/ithost/index.html" class="site-logo"><img src="file:///C:/Users/student/Downloads/ithost/img/logo.png" alt=""></a>
+		<a href="index.html" class="site-logo"><img src="img/logo.png" alt=""></a>
 		<div class="nav-switch">
 			<i class="fa fa-bars"></i>
 		</div>
 		<div class="nav-warp">
 			
 			<ul class="main-menu">
-				<li><a href="file:///C:/Users/student/Downloads/ithost/index.html">Home</a></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/about.html">About us</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About us</a></li>
 				<li></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/blog.html">Team</a></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/contact.html">Contact</a></li>
+				<li><a href="blog.html">Team</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
 	</header>
@@ -58,7 +58,7 @@
 		<div class="container">
 			<h2>About us</h2>
 			<div class="site-breadcrumb">
-				<a href="file:///C:/Users/student/Downloads/ithost/home">Home</a> / <span>About us</span>
+				<a href="home">Home</a> / <span>About us</span>
 			</div>
 		</div>
 	</section>
@@ -77,10 +77,10 @@
 				<div class="col-lg-6 about-text">
 					<h3>Help make us better</h3>
 					<p>At Shu-Box, we strive to deliver premium, top of the line customer service, and we try to be the best that we can possibly be! We want every customer to leave our site satisfied and appreciative for our service, so we try to respond as quickly as possible as we care about your experience. Also, if you have any questions, comments, complaints, please do one of two things: Take a brief, optional survey, or email us!</p>
-					<a href="file:///C:/Users/student/Downloads/ithost/about.html#" class="site-btn">Read More</a>
+					<a href="about.html#" class="site-btn">Read More</a>
 				</div>
 				<div class="col-lg-6">
-					<img src="file:///C:/Users/student/Downloads/ithost/img/about.jpg" alt="">
+					<img src="img/about.jpg" alt="">
 				</div>
 			</div>
 		</div>
@@ -123,11 +123,11 @@
 	<footer class="footer-section">
 		<div class="container">
 			<ul class="footer-menu">
-				<li><a href="file:///C:/Users/student/Downloads/ithost/index.html">Home</a></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/about.html">About us</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About us</a></li>
 				<li></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/blog.html">Team</a></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/contact.html">Contact</a></li>
+				<li><a href="blog.html">Team</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright ©<script>document.write(new Date().getFullYear());</script>2019201920192019 All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com/" target="_blank">Colorlib</a>
@@ -138,11 +138,11 @@ Copyright ©<script>document.write(new Date().getFullYear());</script>2019201920
 
 
 	<!--====== Javascripts & Jquery ======-->
-	<script src="file:///C:/Users/student/Downloads/ithost/js/jquery-3.2.1.min.js"></script>
-	<script src="file:///C:/Users/student/Downloads/ithost/js/bootstrap.min.js"></script>
-	<script src="file:///C:/Users/student/Downloads/ithost/js/owl.carousel.min.js"></script>
-	<script src="file:///C:/Users/student/Downloads/ithost/js/circle-progress.min.js"></script>
-	<script src="file:///C:/Users/student/Downloads/ithost/js/main.js"></script>
+	<script src="js/jquery-3.2.1.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/owl.carousel.min.js"></script>
+	<script src="js/circle-progress.min.js"></script>
+	<script src="js/main.js"></script>
 
 	
 
