--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0051)file:///C:/Users/student/Downloads/ithost/blog.html -->
+<!-- saved from url=(0051)blog.html -->
 <html lang="zxx"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>IT Host - Hosting Template</title>
 	
@@ -7,18 +7,18 @@
 	<meta name="keywords" content="cloud, hosting, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
-	<link href="file:///C:/Users/student/Downloads/ithost/img/favicon.ico" rel="shortcut icon">
+	<link href="img/favicon.ico" rel="shortcut icon">
 
 	<!-- Google Font -->
-	<link href="file:///C:/Users/student/Downloads/ithost/blog_files/css" rel="stylesheet">
+	<link href="blog_files/css" rel="stylesheet">
 
 
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/bootstrap.min.css">
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/font-awesome.min.css">
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/flaticon.css">
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/owl.carousel.min.css">
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/style.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/flaticon.css">
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/style.css">
 
 
 	<!--[if lt IE 9]>
@@ -35,18 +35,18 @@
 
 	<!-- Header section -->
 	<header class="header-section">
-		<a href="file:///C:/Users/student/Downloads/ithost/index.html" class="site-logo"><img src="file:///C:/Users/student/Downloads/ithost/img/logo.png" alt=""></a>
+		<a href="index.html" class="site-logo"><img src="img/logo.png" alt=""></a>
 		<div class="nav-switch">
 			<i class="fa fa-bars"></i>
 		</div>
 		<div class="nav-warp">
 			
 			<ul class="main-menu">
-				<li><a href="file:///C:/Users/student/Downloads/ithost/index.html">Home</a></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/about.html">About us</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About us</a></li>
 				<li></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/blog.html">Team</a></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/contact.html">Contact</a></li>
+				<li><a href="blog.html">Team</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
 	</header>
@@ -58,7 +58,7 @@
 		<div class="container">
 			<h2>Meet The Gang</h2>
 			<div class="site-breadcrumb">
-				<a href="file:///C:/Users/student/Downloads/ithost/home">Home</a> / <span>Gang</span>
+				<a href="home">Home</a> / <span>Gang</span>
 			</div>
 		</div>
 	</section>
@@ -74,44 +74,44 @@
 	<section class="team-section spad">
 		<div class="container">
 			<div class="section-title">
-				<img src="file:///C:/Users/student/Downloads/ithost/img/section-title-icon.png" alt="#">
+				<img src="img/section-title-icon.png" alt="#">
 				<p>The best out there</p>
 				<h2>Meet The Gang</h2>
 			</div>
 			<div class="row">
 				<div class="col-lg-3 col-md-6">
 					<div class="team-member">
-						<img src="file:///C:/Users/student/Downloads/ithost/img/team/1.jpg" alt="#" width="330" height="312.66">
+						<img src="img/team/1.jpg" alt="#" width="330" height="312.66">
 						<h4>Y'ize Lancaster</h4>
 						<p>Hipster</p>
 						<div class="tm-social social">
-							<a href="file:///C:/Users/student/Downloads/ithost/blog.html#"><i class="fa fa-pinterest"></i></a>
-							<a href="file:///C:/Users/student/Downloads/ithost/blog.html#"><i class="fa fa-facebook"></i></a>
-							<a href="file:///C:/Users/student/Downloads/ithost/blog.html#"><i class="fa fa-twitter"></i></a>
+							<a href="blog.html#"><i class="fa fa-pinterest"></i></a>
+							<a href="blog.html#"><i class="fa fa-facebook"></i></a>
+							<a href="blog.html#"><i class="fa fa-twitter"></i></a>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="team-member">
-						<img src="file:///C:/Users/student/Downloads/ithost/img/team/2.jpg" alt="#">
+						<img src="img/team/2.jpg" alt="#">
 						<h4>Shalmaneser George</h4>
 						<p>Hustler</p>
 						<div class="tm-social social">
-							<a href="file:///C:/Users/student/Downloads/ithost/blog.html#"><i class="fa fa-pinterest"></i></a>
-							<a href="file:///C:/Users/student/Downloads/ithost/blog.html#"><i class="fa fa-facebook"></i></a>
-							<a href="file:///C:/Users/student/Downloads/ithost/blog.html#"><i class="fa fa-twitter"></i></a>
+							<a href="blog.html#"><i class="fa fa-pinterest"></i></a>
+							<a href="blog.html#"><i class="fa fa-facebook"></i></a>
+							<a href="blog.html#"><i class="fa fa-twitter"></i></a>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="team-member">
-						<img src="file:///C:/Users/student/Downloads/ithost/img/team/3.jpg" alt="#">
+						<img src="img/team/3.jpg" alt="#">
 						<h4>Dylan Marshall</h4>
 						<p>Hacker</p>
 						<div class="tm-social social">
-							<a href="file:///C:/Users/student/Downloads/ithost/blog.html#"><i class="fa fa-pinterest"></i></a>
-							<a href="file:///C:/Users/student/Downloads/ithost/blog.html#"><i class="fa fa-facebook"></i></a>
-							<a href="file:///C:/Users/student/Downloads/ithost/blog.html#"><i class="fa fa-twitter"></i></a>
+							<a href="blog.html#"><i class="fa fa-pinterest"></i></a>
+							<a href="blog.html#"><i class="fa fa-facebook"></i></a>
+							<a href="blog.html#"><i class="fa fa-twitter"></i></a>
 						</div>
 					</div>
 				</div>
@@ -128,11 +128,11 @@
 	<footer class="footer-section">
 		<div class="container">
 			<ul class="footer-menu">
-				<li><a href="file:///C:/Users/student/Downloads/ithost/blog.html">Home</a></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/blog.html">About us</a></li>
+				<li><a href="blog.html">Home</a></li>
+				<li><a href="blog.html">About us</a></li>
 				<li></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/blog.html">Team</a></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/blog.html">Contact</a></li>
+				<li><a href="blog.html">Team</a></li>
+				<li><a href="blog.html">Contact</a></li>
 			</ul>
 			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright Â©<script>document.write(new Date().getFullYear());</script>201920192019201920192019 All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com/" target="_blank">Colorlib</a>
@@ -143,11 +143,11 @@ Copyright Â©<script>document.write(new Date().getFullYear());</script>20192019
 
 
 	<!--====== Javascripts & Jquery ======-->
-	<script src="file:///C:/Users/student/Downloads/ithost/js/jquery-3.2.1.min.js"></script>
-	<script src="file:///C:/Users/student/Downloads/ithost/js/bootstrap.min.js"></script>
-	<script src="file:///C:/Users/student/Downloads/ithost/js/owl.carousel.min.js"></script>
-	<script src="file:///C:/Users/student/Downloads/ithost/js/circle-progress.min.js"></script>
-	<script src="file:///C:/Users/student/Downloads/ithost/js/main.js"></script>
+	<script src="js/jquery-3.2.1.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/owl.carousel.min.js"></script>
+	<script src="js/circle-progress.min.js"></script>
+	<script src="js/main.js"></script>
 
 	
 
