--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!-- saved from url=(0054)file:///C:/Users/student/Downloads/ithost/contact.html -->
+<!-- saved from url=(0054)contact.html -->
 <html lang="zxx"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style>.dismissButton{background-color:#fff;border:1px solid #dadce0;color:#1a73e8;border-radius:4px;font-family:Roboto,sans-serif;font-size:14px;height:36px;cursor:pointer;padding:0 24px}.dismissButton:hover{background-color:rgba(66,133,244,0.04);border:1px solid #d2e3fc}.dismissButton:focus{background-color:rgba(66,133,244,0.12);border:1px solid #d2e3fc;outline:0}.dismissButton:hover:focus{background-color:rgba(66,133,244,0.16);border:1px solid #d2e2fd}.dismissButton:active{background-color:rgba(66,133,244,0.16);border:1px solid #d2e2fd;box-shadow:0 1px 2px 0 rgba(60,64,67,0.3),0 1px 3px 1px rgba(60,64,67,0.15)}.dismissButton:disabled{background-color:#fff;border:1px solid #f1f3f4;color:#3c4043}
 </style><style>.gm-control-active>img{box-sizing:content-box;display:none;left:50%;pointer-events:none;position:absolute;top:50%;transform:translate(-50%,-50%)}.gm-control-active>img:nth-child(1){display:block}.gm-control-active:hover>img:nth-child(1),.gm-control-active:active>img:nth-child(1){display:none}.gm-control-active:hover>img:nth-child(2),.gm-control-active:active>img:nth-child(3){display:block}
-</style><link type="text/css" rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/blog_files/css"><style>.gm-ui-hover-effect{opacity:.6}.gm-ui-hover-effect:hover{opacity:1}
+</style><link type="text/css" rel="stylesheet" href="blog_files/css"><style>.gm-ui-hover-effect{opacity:.6}.gm-ui-hover-effect:hover{opacity:1}
 </style><style>.gm-style .gm-style-cc span,.gm-style .gm-style-cc a,.gm-style .gm-style-mtc div{font-size:10px;box-sizing:border-box}
 </style><style>@media print {  .gm-style .gmnoprint, .gmnoprint {    display:none  }}@media screen {  .gm-style .gmnoscreen, .gmnoscreen {    display:none  }}</style><style>.gm-style-pbc{transition:opacity ease-in-out;background-color:rgba(0,0,0,0.45);text-align:center}.gm-style-pbt{font-size:22px;color:white;font-family:Roboto,Arial,sans-serif;position:relative;margin:0;top:50%;-webkit-transform:translateY(-50%);-ms-transform:translateY(-50%);transform:translateY(-50%)}
 </style><style>.gm-style img{max-width: none;}.gm-style {font: 400 11px Roboto, Arial, sans-serif; text-decoration: none;}</style>
@@ -12,18 +12,18 @@
 	<meta name="keywords" content="cloud, hosting, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
-	<link href="file:///C:/Users/student/Downloads/ithost/img/favicon.ico" rel="shortcut icon">
+	<link href="img/favicon.ico" rel="shortcut icon">
 
 	<!-- Google Font -->
-	<link href="file:///C:/Users/student/Downloads/ithost/blog_files/css(1)" rel="stylesheet">
+	<link href="blog_files/css(1)" rel="stylesheet">
 
 
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/bootstrap.min.css">
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/font-awesome.min.css">
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/flaticon.css">
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/owl.carousel.min.css">
-	<link rel="stylesheet" href="file:///C:/Users/student/Downloads/ithost/css/style.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/flaticon.css">
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/style.css">
 
 
 	<!--[if lt IE 9]>
@@ -31,7 +31,7 @@
 	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
 
-<script type="text/javascript" charset="UTF-8" src="file:///C:/Users/student/Downloads/ithost/blog_files/common.js.download"></script><script type="text/javascript" charset="UTF-8" src="file:///C:/Users/student/Downloads/ithost/blog_files/util.js.download"></script><script type="text/javascript" charset="UTF-8" src="file:///C:/Users/student/Downloads/ithost/blog_files/map.js.download"></script><script type="text/javascript" charset="UTF-8" src="file:///C:/Users/student/Downloads/ithost/blog_files/marker.js.download"></script><script type="text/javascript" charset="UTF-8" src="file:///C:/Users/student/Downloads/ithost/blog_files/onion.js.download"></script><script type="text/javascript" charset="UTF-8" src="file:///C:/Users/student/Downloads/ithost/blog_files/controls.js.download"></script><script type="text/javascript" charset="UTF-8" src="file:///C:/Users/student/Downloads/ithost/contact_files/common.js.download"></script><script type="text/javascript" charset="UTF-8" src="file:///C:/Users/student/Downloads/ithost/contact_files/util.js.download"></script><script type="text/javascript" charset="UTF-8" src="file:///C:/Users/student/Downloads/ithost/contact_files/AuthenticationService.Authenticate"></script><script type="text/javascript" charset="UTF-8" src="file:///C:/Users/student/Downloads/ithost/contact_files/common.js.download"></script><script type="text/javascript" charset="UTF-8" src="file:///C:/Users/student/Downloads/ithost/contact_files/util.js.download"></script><script type="text/javascript" charset="UTF-8" src="./contact_files/common.js.download"></script><script type="text/javascript" charset="UTF-8" src="./contact_files/util.js.download"></script></head>
+<script type="text/javascript" charset="UTF-8" src="blog_files/common.js.download"></script><script type="text/javascript" charset="UTF-8" src="blog_files/util.js.download"></script><script type="text/javascript" charset="UTF-8" src="blog_files/map.js.download"></script><script type="text/javascript" charset="UTF-8" src="blog_files/marker.js.download"></script><script type="text/javascript" charset="UTF-8" src="blog_files/onion.js.download"></script><script type="text/javascript" charset="UTF-8" src="blog_files/controls.js.download"></script><script type="text/javascript" charset="UTF-8" src="contact_files/common.js.download"></script><script type="text/javascript" charset="UTF-8" src="contact_files/util.js.download"></script><script type="text/javascript" charset="UTF-8" src="contact_files/AuthenticationService.Authenticate"></script><script type="text/javascript" charset="UTF-8" src="contact_files/common.js.download"></script><script type="text/javascript" charset="UTF-8" src="contact_files/util.js.download"></script><script type="text/javascript" charset="UTF-8" src="./contact_files/common.js.download"></script><script type="text/javascript" charset="UTF-8" src="./contact_files/util.js.download"></script></head>
 <body>
 	<!-- Page Preloder -->
 	<div id="preloder" style="display: none;">
@@ -40,18 +40,18 @@
 
 	<!-- Header section -->
 	<header class="header-section">
-		<a href="file:///C:/Users/student/Downloads/ithost/index.html" class="site-logo"><img src="file:///C:/Users/student/Downloads/ithost/img/logo.png" alt=""></a>
+		<a href="index.html" class="site-logo"><img src="img/logo.png" alt=""></a>
 		<div class="nav-switch">
 			<i class="fa fa-bars"></i>
 		</div>
 		<div class="nav-warp">
 			
 			<ul class="main-menu">
-				<li><a href="file:///C:/Users/student/Downloads/ithost/index.html">Home</a></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/about.html">About us</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About us</a></li>
 				<li></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/blog.html">Team</a></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/contact.html">Contact</a></li>
+				<li><a href="blog.html">Team</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
 	</header>
@@ -63,7 +63,7 @@
 		<div class="container">
 			<h2>Contact</h2>
 			<div class="site-breadcrumb">
-				<a href="file:///C:/Users/student/Downloads/ithost/home">Home</a> / <span>Contact</span>
+				<a href="home">Home</a> / <span>Contact</span>
 			</div>
 		</div>
 	</section>
@@ -79,19 +79,19 @@
 					<p>Contact us for more information. We will get back to you as soon as possible.</p>
 					<div class="cont-info">
 						<div class="ci-icon">
-							<img src="file:///C:/Users/student/Downloads/ithost/img/icons/1.png" alt="">
+							<img src="img/icons/1.png" alt="">
 						</div>
 						<span>Howard University</span>
 					</div>
 					<div class="cont-info">
 						<div class="ci-icon">
-							<img src="file:///C:/Users/student/Downloads/ithost/img/icons/2.png" alt="">
+							<img src="img/icons/2.png" alt="">
 						</div>
 						<span>+202 806 2400</span>
 					</div>
 					<div class="cont-info">
 						<div class="ci-icon">
-							<img src="file:///C:/Users/student/Downloads/ithost/img/icons/2.png" alt="">
+							<img src="img/icons/2.png" alt="">
 						</div>
 						<span>example@shu-box.com</span>
 					</div>
@@ -129,11 +129,11 @@
 	<footer class="footer-section">
 		<div class="container">
 			<ul class="footer-menu">
-				<li><a href="file:///C:/Users/student/Downloads/ithost/contact.html?">Home</a></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/contact.html?">About us</a></li>
+				<li><a href="contact.html?">Home</a></li>
+				<li><a href="contact.html?">About us</a></li>
 				<li></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/contact.html?">Team</a></li>
-				<li><a href="file:///C:/Users/student/Downloads/ithost/contact.html?">Contact</a></li>
+				<li><a href="contact.html?">Team</a></li>
+				<li><a href="contact.html?">Contact</a></li>
 			</ul>
 			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright Â©<script>document.write(new Date().getFullYear());</script>2019201920192019 All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com/" target="_blank">Colorlib</a>
@@ -144,15 +144,15 @@ Copyright Â©<script>document.write(new Date().getFullYear());</script>20192019
 
 
 		<!--====== Javascripts & Jquery ======-->
-	<script src="file:///C:/Users/student/Downloads/ithost/js/jquery-3.2.1.min.js"></script>
-	<script src="file:///C:/Users/student/Downloads/ithost/js/bootstrap.min.js"></script>
-	<script src="file:///C:/Users/student/Downloads/ithost/js/owl.carousel.min.js"></script>
-	<script src="file:///C:/Users/student/Downloads/ithost/js/circle-progress.min.js"></script>
-	<script src="file:///C:/Users/student/Downloads/ithost/js/main.js"></script>
+	<script src="js/jquery-3.2.1.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/owl.carousel.min.js"></script>
+	<script src="js/circle-progress.min.js"></script>
+	<script src="js/main.js"></script>
 
 	<!-- load for map -->
-	<script src="file:///C:/Users/student/Downloads/ithost/blog_files/js"></script>
-	<script src="file:///C:/Users/student/Downloads/ithost/js/map.js"></script>
+	<script src="blog_files/js"></script>
+	<script src="js/map.js"></script>
 
 
 
