Read More Button change

--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 				<div class="col-lg-6 about-text">
 					<h3>Help make us better</h3>
 					<p>At Shu-Box, we strive to deliver premium, top of the line customer service, and we try to be the best that we can possibly be! We want every customer to leave our site satisfied and appreciative for our service, so we try to respond as quickly as possible as we care about your experience. Also, if you have any questions, comments, complaints, please do one of two things: Take a brief, optional survey, or email us!</p>
-					<a href="about.html#" class="site-btn">Read More</a>
+					<a href="about.html#" class="site-btn">Brief Survey</a>
 				</div>
 				<div class="col-lg-6">
 					<img src="img/about.jpg" alt="">
