--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@
 					<div class="col-lg-6 pr-0">
 						<h2>Shu-Box</h2>
 						<p>A premiere shoe rental service.</p>
-						
+						<p>Hi!</p>
 					</div>
 				</div>
 				<div class="hero-rocket">
 					<img src="img/rocket.png" alt="">
+					<p>Hi</p>
 				</div>
+				<p>wassup</p>
 			</div>
 		</div>
 	</section>
