--- a/index.html
+++ b/index.html
@@ -64,7 +64,15 @@
 						<p>A premiere shoe rental service.</p>
 	
 	<h3>What is Shu-Box?</h3>					
-	<p>Hi!</p>
+	<p>Shu-Box is a new shoe rental service that allows customers to rent shoes for a certain limit of time. <br>
+		It's a beautiful thing really. Any time you need a shoe for a certain event, BAM, you have it, shipped to<br>
+		you directly, with free 2 day shipping for rentals over 5 days. We use <br>
+		vendors to get the customers their shoes, but we make sure the shoes are in top condition before <br>
+		renting them out to you. We won't even let vendors give us a pair of shoes past a certain roughness level <br>
+		to assure customers top quality, without having you guys worry about the condition the shoes that <br>
+		you spend your hard earned money are in before you get them. Our premium members get direct access to vendors<br>
+		and premium shoe options without the luxury shoe fee. You'll also be able to rent more than one shoe <br>
+		at a time!</p>
 					</div>
 				</div>
 				<div class="hero-rocket">
